# big_huffman

./: CMakeLists.txt  code.cpp  huffman.hpp  main.cpp  reader.cpp  tester.cpp
test11/: test_out.txt
test6/: test_in.txt
test7/: test_in.txt
